--- a/docs/screen.css
+++ b/docs/screen.css
@@ -15,7 +15,7 @@ body {
   display: flex;
   flex-direction: column;
   /** min-height: 100vh; */
-  margin: 0;
+  margin: 1em;
   padding: 0;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -28,7 +28,7 @@ nav {
   display: flex;
   top: 0.5rem;
   right: 0.5rem;
-  background-color: blue;
+  background-color: white;
   /*opacity: 0*/
 }
 
@@ -41,7 +41,7 @@ nav a {
   padding: 0.3em 0.3em;
   text-align: center;
   /* flex-grow: 1;*/
-  color: white;
+  color: black;
 }
 
 a:hover {
@@ -59,9 +59,12 @@ a:hover {
 
 /* DIV Container */
 .container {
+  background-color: white;
+  margin-bottom: 3em;
   margin-left: auto;
   margin-right: auto;
-  width: 1200px;
+  width: 80em;
+  padding-bottom: 1em;
   /*max-width: 70em;*/
 }
 
@@ -118,16 +121,19 @@ section {
 /* Headings and Paragraph Styles */
 p {
   font-weight: 500;
-  color: white;
+  color: black;
   padding: 0 1em;
-  max-width: 600px;
+  max-width: 60em;
   margin:1em auto;
 }
 
-h2, h3 {
-  color: #55a657;
+h2 {
+  background-color: #39995a;
+  color: white;
   font-weight: 500;
   line-height: 1em;
+  padding-top: 0.3em;
+  padding-bottom: 0.3em;
   margin: 0 0 1em 0;
   letter-spacing: -0.01em;
 }
@@ -145,10 +151,10 @@ h2 {
   font-size: 1.5em;
 }
 
-h3 {
-  font-size: 1em;
-}
 
+h4 {
+  color: white;
+}
 
 
 
@@ -168,6 +174,7 @@ img:hover {
 }
 
 .artists-images img {
+
   /*border-radius: 50%;*/
   height: 125px;
   width: 125px;
@@ -177,8 +184,11 @@ img:hover {
 .artists-images {
   display: flex;
   flex-wrap: wrap;
-  gap: 2em;
-  }
+  align-content: center;
+  gap: 0.5em;
+  padding-left: 1em;
+  padding-bottom: 1em;
+}
 
 
 /* Banner */
