--- a/docs/print.css
+++ b/docs/print.css
@@ -1,4 +1,5 @@
 /* CSS Document for Print */
+/* Is this necessary? */
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@700&display=swap');
 @page {margin: .5cm;}
 
